Fix styles to prevent content shifting when error is shown

--- a/frontend/src/material-fields.override.scss
+++ b/frontend/src/material-fields.override.scss
@@ -52,6 +52,9 @@
 
   mat-form-field.mat-form-field-invalid .mat-form-field-subscript-wrapper {
     margin-top: 0;
+
+    height: 0;
+    overflow: visible;
   }
 }
 
@@ -61,6 +64,9 @@
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.4px;
+
+    height: 0;
+    overflow: visible;
 
     .mat-hint {
       color: $ige-text-color;
